JiffleNowDev/src/objects/Meeting_Relations__c.object
<CustomObject>
    <description>Object used to store Jifflenow meetings relationship with account, opportunity.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Meetings</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>Meeting__r.Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <formula>Meeting__r.Meeting_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Meeting Relations</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Meetings</relationshipLabel>
        <relationshipName>Meeting_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <formula>text(Meeting__r.Request_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <description>Used to store any other unique key</description>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meeting Relations</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>